--- a/habitogether_backend/src/.env
+++ b/habitogether_backend/src/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/fitleveling
+MONGO_URI=mongodb://localhost:27017/habitogether
 JWT_SECRET=supersecretkey
 SECRET_KEY=benten
